--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"bootstrap": "5.2.2",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"weather-icons": "^1.3.2"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react": "^2.0.0",
